--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-
+<title><%-title%></title>
 <% include ./partials/header %>
  <!-- <script src="/javascripts/js/buyer/cart.js"></script> -->
  <link href="stylesheets/css/custom/timber.scss.css" rel="stylesheet" type="text/css" media="all">
@@ -269,105 +269,99 @@
  </div>
  <div class="cart-overlay"></div>
  <div id="PageContainer" class="is-moved-by-drawer">
-	<section id="main-slider">
-	   <div id="owl-home-slider" class="owl-carousel owl-enable owl-theme" data-nav="true" data-items="1" data-desktop="[1240, 1]" data-mobile="[979, 1]" style="opacity: 1; display: block;">
-		  <div class="owl-wrapper-outer">
-			 <div class="owl-wrapper" style="width: 8094px; left: 0px; display: block;">
-				<div class="owl-item" style="width: 1349px;">
-				   <div class="item">
-					  <div class="slide-bg">
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Suplo Furniture">
-					  </div>
-					  <div class="slide-content-outside">
-						 <div class="wrapper">
-							<div class="inner clearfix">
-							   <div class="grid">
-								  <div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
-									 <div class="slide-content">
-										<p class="desc small--hide">Chào mừng bạn đến với Suplo Furniture</p>
-										<h2 class="title small--hide">
-										   THIẾT KẾ NỘI THẤT DEMO
-										</h2>
-										<p class="author small--hide">
-										   FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
-										</p>
-									 </div>
-									 <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
-								  </div>
-							   </div>
-							</div>
-						 </div>
-					  </div>
-				   </div>
+	<section id="main-slider" style="padding-left: 15px;">
+		<div class="grid">
+			<div class="frontSlider" id="frontPage">
+				<div class="MS-content">
+					<div class="item">
+						<div style="display: flex;">
+							<div class="slide-bg">
+								<img src="images/img/home.jpg" alt="Chào mừng bạn đến với Furniture">
+								<!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+							 </div>
+							 <div class="slide-content-outside">
+								<div class="wrapper">
+								   <div class="inner clearfix">
+									  <div class="grid">
+										 <div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
+											<div class="slide-content">
+											   <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
+											   <h2 class="title small--hide">
+												  NỘI THẤT FURNITURE
+											   </h2>
+											   <p class="author small--hide">
+												  FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
+											   </p>
+											</div>
+											<a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
+										 </div>
+									  </div>
+								   </div>
+								</div>
+							 </div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="slide-bg">
+						   <img src="images/img/home1.jpg" alt="Chào mừng bạn đến với Furniture">
+						   <!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						</div>
+						<div class="slide-content-outside">
+						   <div class="wrapper">
+							  <div class="inner clearfix">
+								 <div class="grid">
+									<div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
+									   <div class="slide-content">
+										  <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
+										  <h2 class="title small--hide">
+											 NỘI THẤT FURNITURE
+										  </h2>
+										  <p class="author small--hide">
+											 FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
+										  </p>
+									   </div>
+									   <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
+									</div>
+								 </div>
+							  </div>
+						   </div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="slide-bg">
+						   <img src="images/img/home2.jpg" alt="Chào mừng bạn đến với Furniture">
+						   <!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						</div>
+						<div class="slide-content-outside">
+						   <div class="wrapper">
+							  <div class="inner clearfix">
+								 <div class="grid">
+									<div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
+									   <div class="slide-content">
+										  <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
+										  <h2 class="title small--hide">
+											 NỘI THẤT FURNITURE
+										  </h2>
+										  <p class="author small--hide">
+											 FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
+										  </p>
+									   </div>
+									   <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
+									</div>
+								 </div>
+							  </div>
+						   </div>
+						</div>
+					</div>
 				</div>
-				<div class="owl-item" style="width: 1349px;">
-				   <div class="item">
-					  <div class="slide-bg">
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_2.png?v=2476" alt="Chào mừng bạn đến với Suplo Furniture">
-					  </div>
-					  <div class="slide-content-outside">
-						 <div class="wrapper">
-							<div class="inner clearfix">
-							   <div class="grid">
-								  <div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
-									 <div class="slide-content">
-										<p class="desc small--hide">Chào mừng bạn đến với Suplo Furniture</p>
-										<h2 class="title small--hide">
-										   THIẾT KẾ NỘI THẤT DEMO
-										</h2>
-										<p class="author small--hide">
-										   FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
-										</p>
-									 </div>
-									 <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
-								  </div>
-							   </div>
-							</div>
-						 </div>
-					  </div>
-				   </div>
+				<div class="MS-controls">
+					<button class="MS-left"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+					<button class="MS-right"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
 				</div>
-				<div class="owl-item" style="width: 1349px;">
-				   <div class="item">
-					  <div class="slide-bg">
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_3.png?v=2476" alt="Chào mừng bạn đến với Suplo Furniture">
-					  </div>
-					  <div class="slide-content-outside">
-						 <div class="wrapper">
-							<div class="inner clearfix">
-							   <div class="grid">
-								  <div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
-									 <div class="slide-content">
-										<p class="desc small--hide">Chào mừng bạn đến với Suplo Furniture</p>
-										<h2 class="title small--hide">
-										   THIẾT KẾ NỘI THẤT DEMO
-										</h2>
-										<p class="author small--hide">
-										   FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
-										</p>
-									 </div>
-									 <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
-								  </div>
-							   </div>
-							</div>
-						 </div>
-					  </div>
-				   </div>
-				</div>
-			 </div>
-		  </div>
-		  <div class="owl-controls clickable">
-			 <div class="owl-pagination">
-				<div class="owl-page active"><span class=""></span></div>
-				<div class="owl-page"><span class=""></span></div>
-				<div class="owl-page"><span class=""></span></div>
-			 </div>
-			 <div class="owl-buttons">
-				<div class="owl-prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
-				<div class="owl-next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
-			 </div>
-		  </div>
-	   </div>
+			</div>
+			
+		</div>
+		</div>
 	</section>
 	<main class="main-content">
 	   <section id="home-banner" class="mg-bottom-30">
@@ -380,7 +374,8 @@
 						 <div class="ov2"></div>
 						 <div class="ov3"></div>
 						 <div class="ov4"></div>
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/banner_img_1.png?v=2476" alt="Siêu thị nội thất SUPLO">
+						 <img src="images/img/homeS1.jpg" alt="Siêu thị nội thất SUPLO" style="display: block;
+						 width: 590px; height: 454px; background-position: center center;">
 						 <div class="text-content">
 							<h2 class="title">
 							   NỘI THẤT GIẢM GIÁ 35% - 50%
@@ -392,22 +387,22 @@
 					  </a>
 				   </div>
 				   <div class="grid__item large--six-twelfths medium--one-whole small--one-whole pd-0 custom-banner">
-					  <a target="_blank" class="custom-banner" href="/collections/all">
+					  <a target="_blank" class="custom-banner" href="/product/all">
 						 <div class="ov1"></div>
 						 <div class="ov2"></div>
 						 <div class="ov3"></div>
 						 <div class="ov4"></div>
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/banner_img_2.png?v=2476" alt="Siêu thị nội thất SUPLO">
+						 <img src="images/img/homeS2.jpg" alt="Siêu thị nội thất SUPLO" style="display: block; width: 590px; height: 227px; background-position: center center;">
 					  </a>
 					  <a target="_blank" href="/collections/all">
 						 <div class="ov1"></div>
 						 <div class="ov2"></div>
 						 <div class="ov3"></div>
 						 <div class="ov4"></div>
-						 <img src="http://theme.hstatic.net/1000187230/1000241027/14/banner_img_3.png?v=2476" alt="Siêu thị nội thất SUPLO">
+						 <img src="images/img/homeS3.jpg" alt="Siêu thị nội thất SUPLO" style="display: block; width: 590px; height: 227px; background-position: center center;">
 						 <div class="text-content2 large--five-twelfths  medium--one-whole small--one-whole custom-banner">
 							<h2 class="title">
-							   SẢN PHẨM THIẾT KẾ MỚI NHẤT 2017
+							   SẢN PHẨM THIẾT KẾ MỚI NHẤT 2021	
 							</h2>
 						 </div>
 					  </a>
@@ -437,6 +432,7 @@
 			 </div>
 		  </div>
 	   </section>
+	   <% if (userInfo) {%>
 	   <section id="home-featured-products" class="mg-top-60 mg-bottom-60">
 		<div class="wrapper">
 		   <div class="inner text-center">
@@ -494,6 +490,7 @@
 		   </div>
 		</div>
 	 </section>
+	 <%}%>
 	   <section id="home-featured-products" class="mg-top-60 mg-bottom-60">
 		  <div class="wrapper">
 			 <div class="inner text-center">
@@ -843,103 +840,6 @@
  <div id="back-to-top" style="display: block;">
 	<i class="fa fa-angle-up" aria-hidden="true"></i>
  </div>
- <div id="popup-subscribe" class="popup" style="display: none;">
-	<!-- Modal content -->
-	<div class="popup-content">
-	   <div class="grid">
-		  <div class="grid__item large--one-whole medium--one-whole small--one-whole">
-			 <span class="close-popup"><i class="fa fa-times" aria-hidden="true"></i></span>
-			 <h2>
-				HÃY ĐẾN VỚI CHÚNG TÔI
-			 </h2>
-			 <p>
-				Đăng ký nhận các tin tức và thông tin tuyển dụng mới nhất của Suplo Vietnam:
-			 </p>
-			 <form accept-charset="UTF-8" action="/account/contact" class="contact-form" method="post">
-				<input name="form_type" type="hidden" value="customer">
-				<input name="utf8" type="hidden" value="✓">
-				<div class="input-group">
-				   <input type="email" value="" placeholder="email@example.com" name="contact[email]" id="Email" class="input-group-field" aria-label="email@example.com">
-				   <input type="hidden" name="contact[tags]" value="newsletter">
-				   <span class="input-group-btn">
-				   <button type="submit" class="btn"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-				   </span>
-				</div>
-				
-			 </form>
-			 <div class="modal-social-icons">
-				<a href="https://web.facebook.com/haravan.official/" target="_blank" class="iconFB"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-				<a href="https://web.facebook.com/haravan.official/" target="_blank" class="iconTW"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-				<a href="https://web.facebook.com/haravan.official/" target="_blank" class="iconYT"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-				<a href="https://web.facebook.com/haravan.official/" target="_blank" class="iconGG"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-			 </div>
-		  </div>
-	   </div>
-	</div>
- </div>
- <button id="popup-btn"></button>
- <script>
-	var modal = document.getElementById('popup-subscribe');
-	var btn = document.getElementById("popup-btn");
-	var span = document.getElementsByClassName("close-popup")[0];
-	btn.onclick = function() {
-		modal.style.display = "block";
-	}
-	span.onclick = function() {
-		modal.style.display = "none";
-	}
-	window.onclick = function(event) {
-		if (event.target == modal) {
-			modal.style.display = "none";
-		}
-	}
-	
-	
-	$(document).ready(function($){
-		var date = new Date();
-		var minutes = 60;
-		date.setTime(date.getTime() + (minutes * 60 * 1000));
-		if (getCookie('popupNewLetterStatus') != 'closed') {
-			$('#popup-btn').trigger('click');
-			setCookie('popupNewLetterStatus', 'closed', date);
-		};
-	});
-	
-	
-	function setCookie(cname, cvalue, exdays) {
-		var d = new Date();
-		d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-		var expires = "expires="+d.toUTCString();
-		document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-	}
-	
-	function getCookie(cname) {
-		var name = cname + "=";
-		var ca = document.cookie.split(';');
-		for(var i = 0; i < ca.length; i++) {
-			var c = ca[i];
-			while (c.charAt(0) == ' ') {
-				c = c.substring(1);
-			}
-			if (c.indexOf(name) == 0) {
-				return c.substring(name.length, c.length);
-			}
-		}
-		return "";
-	}
-	
-	function checkCookie() {
-		var user = getCookie("username");
-		if (user != "") {
-			alert("Welcome again " + user);
-		} else {
-			user = prompt("Please enter your name:", "");
-			if (user != "" && user != null) {
-				setCookie("username", user, 365);
-			}
-		}
-	}
- </script>
 
  <script src="http://theme.hstatic.net/1000187230/1000241027/14/fastclick.min.js?v=2476" type="text/javascript"></script>
  <script src="http://hstatic.net/0/0/global/design/js/owl.carousel.js" type="text/javascript"></script>
@@ -1050,7 +950,7 @@
 								<div class="grid__item display-table-cell one-half text-right">
 									{{#if discountsApplied}}
 									<!---
-	<small class="ajaxcart-item__price-strikethrough hide"><s>{{{originalLinePrice}}}</s></small>
+	<small class="ajaxcart-item__price-strikethrough hide"><`>{{{originalLinePrice}}}</s></small>
 	<br>
 	-->
 									<span>{{{linePrice}}}</span>
@@ -1139,22 +1039,7 @@
  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
  <!-- or -->
  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
- <script>
-	jQuery(function($) {
-		ajaxCart.init({
-			formSelector: '#AddToCartForm',
-			cartContainer: '#CartContainer',
-			addToCartSelector: '#AddToCart',
-			cartCountSelector: '#CartCount',
-			cartCostSelector: '#CartCost',
-			moneyFormat: "{{amount}}₫"
-									});
-	});
-	jQuery(document.body).on('afterCartLoad.ajaxCart', function(evt, cart) {
-		// Bind to 'afterCartLoad.ajaxCart' to run any javascript after the cart has loaded in the DOM
-		timber.RightDrawer.open();
-	});
- </script>
+
  <script>
 	function openTab(evt, tabName) {
 		var i, tabcontent, tablinks;
@@ -1676,6 +1561,10 @@
 		interval: 3000
 	}); 
 	$('#productFeatured').multislider({
+		duration: 750,
+		interval: 3000
+	}); 
+	$('#frontPage').multislider({
 		duration: 750,
 		interval: 3000
 	}); 
