--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -12,9 +12,10 @@
         <div class="row">
             <div class="col-md-3 register-left">
                 <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
-                <h3>Welcome</h3>
-                <p>You are 30 seconds away from earning your own money!</p>
-                <input type="submit" name="" value="Login"/><br/>
+                <h3>Chào mừng đến với Funiture</h3>
+                <p>Sàn thương mại điện tử hỗ trợ mua và bán các sản phẩm liên quan đến nội thất nhà ở</p>
+                <a href="/login"><input type="submit" name="" value="Login"/></a>
+                <a href="/"><input type="submit" name="" value="Trang chủ"/ style="margin: 0;"></a><br/>
             </div>
             <div class="col-md-9 register-right">
                 <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
