--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -58,7 +58,7 @@
             </div>
             <div class="col-sm-5 body-newsletter">
               <div class="input-group">
-                <input type="email" class="form-control form-control-sm" placeholder="Nhập email của bạn">
+                <input type="email" class="form-control form-control-sm" placeholder="Nhập email của bạn" style="width: 100%;">
                 <div class="input-group-append">
                   <a href="" class="btn btn-register">Đăng ký</a>
                 </div>
