--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 	 window.HaravanAnalytics.meta[attr] = meta[attr];
 	 }
  </script>
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
 
  <script src="https://cdn.rawgit.com/tuupola/jquery_lazyload/0a5e0785a90eb41a6411d67a2f2e56d55bbecbd3/lazyload.js"></script>
  <script type="text/javascript" charset="utf-8">
@@ -189,7 +189,7 @@
 			 </li>
 			 <li class="mobile-nav__item has-image" aria-haspopup="true">
 				<div class="sub-menu__child--img">
-				   <a href="" class="mega-img"><img src="http://theme.hstatic.net/1000187230/1000241027/14/image_child_5.png?v=2476" alt="Siêu thị nội thất SUPLO"></a>
+				   <a href="" class="mega-img"><img src="https://theme.hstatic.net/1000187230/1000241027/14/image_child_5.png?v=2476" alt="Siêu thị nội thất SUPLO"></a>
 				</div>
 			 </li>
 		  </ul>
@@ -277,7 +277,7 @@
 						<div style="display: flex;">
 							<div class="slide-bg">
 								<img src="images/img/home.jpg" alt="Chào mừng bạn đến với Furniture">
-								<!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+								<!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
 							 </div>
 							 <div class="slide-content-outside">
 								<div class="wrapper">
@@ -304,7 +304,7 @@
 					<div class="item">
 						<div class="slide-bg">
 						   <img src="images/img/home1.jpg" alt="Chào mừng bạn đến với Furniture">
-						   <!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						   <!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
 						</div>
 						<div class="slide-content-outside">
 						   <div class="wrapper">
@@ -330,7 +330,7 @@
 					<div class="item">
 						<div class="slide-bg">
 						   <img src="images/img/home2.jpg" alt="Chào mừng bạn đến với Furniture">
-						   <!-- <img src="http://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						   <!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
 						</div>
 						<div class="slide-content-outside">
 						   <div class="wrapper">
@@ -422,7 +422,7 @@
 				   <div class="grid__item large--two-twelfths medium--four-twelfths small--six-twelfths">
 					  <a href="/product/<%-item.name%>.<%-item.id%>">
 						 <div class="collection-item">
-							<img src="http://theme.hstatic.net/1000187230/1000241027/14/collection_1.png?v=2476" alt="Trang trí">
+							<img src="https://theme.hstatic.net/1000187230/1000241027/14/collection_1.png?v=2476" alt="Trang trí">
 							<span><%-item.name%></span>
 						 </div>
 					  </a>
@@ -648,7 +648,7 @@
 		  });
 	   </script>
 
-	   <section id="home-policy" class=" mg-bottom-30 mg-top-30 pd-top-60 pd-bottom-60" style="background-image: url(http://theme.hstatic.net/1000187230/1000241027/14/bg_box.jpg?v=2476)">
+	   <section id="home-policy" class=" mg-bottom-30 mg-top-30 pd-top-60 pd-bottom-60" style="background-image: url(https://theme.hstatic.net/1000187230/1000241027/14/bg_box.jpg?v=2476)">
 		  <div class="overlow"></div>
 		  <div class="wrapper policy-content">
 			 <div class="inner">
@@ -657,7 +657,7 @@
 					  <div class="inner">
 						 <a target="_blank" href="/collections/all">
 							<p class="policy-icon">
-							   <img src="http://theme.hstatic.net/1000187230/1000241027/14/policy_icon_1.png?v=2476" alt="MIỄN PHÍ GIAO HÀNG">
+							   <img src="https://theme.hstatic.net/1000187230/1000241027/14/policy_icon_1.png?v=2476" alt="MIỄN PHÍ GIAO HÀNG">
 							</p>
 							<div class="tex-box">
 							   <h2 class="policy-title">
@@ -674,7 +674,7 @@
 					  <div class="inner">
 						 <a target="_blank" href="/collections/all">
 							<p class="policy-icon">
-							   <img src="http://theme.hstatic.net/1000187230/1000241027/14/policy_icon_2.png?v=2476" alt="CHẤT LƯỢNG ĐẢM BẢO">
+							   <img src="https://theme.hstatic.net/1000187230/1000241027/14/policy_icon_2.png?v=2476" alt="CHẤT LƯỢNG ĐẢM BẢO">
 							</p>
 							<div class="tex-box">
 							   <h2 class="policy-title">
@@ -691,7 +691,7 @@
 					  <div class="inner">
 						 <a target="_blank" href="/collections/all">
 							<p class="policy-icon">
-							   <img src="http://theme.hstatic.net/1000187230/1000241027/14/policy_icon_3.png?v=2476" alt="ĐỔI TRẢ DỄ DÀNG">
+							   <img src="https://theme.hstatic.net/1000187230/1000241027/14/policy_icon_3.png?v=2476" alt="ĐỔI TRẢ DỄ DÀNG">
 							</p>
 							<div class="tex-box">
 							   <h2 class="policy-title">
@@ -732,14 +732,14 @@
 										   </div>
 										   <a href="http:/blogs/news/phong-cach-sang-trong-lich-su-cua-mau-ghe-sofa-nhieu-cho-moi" class="btn btnViewMore">Xem thêm</a>
 										</div>
-										<a href="/blogs/news/phong-cach-sang-trong-lich-su-cua-mau-ghe-sofa-nhieu-cho-moi" class="image"><img src="http://file.hstatic.net/1000187230/article/blog3_c00f9b02283b4a888eda2be35939b286_932fb5e42a334959ba88fd1ca6b776ae_grande.jpg" alt="Phong cách sang trọng, lịch sự của mẫu ghế sofa nhiều chỗ mới"></a>
+										<a href="/blogs/news/phong-cach-sang-trong-lich-su-cua-mau-ghe-sofa-nhieu-cho-moi" class="image"><img src="https://file.hstatic.net/1000187230/article/blog3_c00f9b02283b4a888eda2be35939b286_932fb5e42a334959ba88fd1ca6b776ae_grande.jpg" alt="Phong cách sang trọng, lịch sự của mẫu ghế sofa nhiều chỗ mới"></a>
 									 </div>
 								  </div>
 							   </div>
 							   <div class="owl-item" style="width: 393px;">
 								  <div class="item grid__item pd-0">
 									 <div class="a-related-blog">
-										<a href="/http:blogs/news/ghe-sofa-kich-thuoc-be" class="image"><img src="http://file.hstatic.net/1000187230/article/blog2_b416d5f3ce514a22bb8d017c9fc7a4d7_grande.jpg" alt="Ghế sofa kích thước bé giúp người dùng có thể để những nơi hẹp"></a>
+										<a href="/http:blogs/news/ghe-sofa-kich-thuoc-be" class="image"><img src="https://file.hstatic.net/1000187230/article/blog2_b416d5f3ce514a22bb8d017c9fc7a4d7_grande.jpg" alt="Ghế sofa kích thước bé giúp người dùng có thể để những nơi hẹp"></a>
 										<div class="blog-content">
 										   <div class="arrow-up"></div>
 										   <span class="datetime">06-05-2017</span>
@@ -764,14 +764,14 @@
 										   </div>
 										   <a href="/blogs/news/huong-dan-dat-sofa-theo-phong-thuy" class="btn btnViewMore">Xem thêm</a>
 										</div>
-										<a href="/blogs/news/huong-dan-dat-sofa-theo-phong-thuy" class="image"><img src="http://file.hstatic.net/1000187230/article/blog3_c00f9b02283b4a888eda2be35939b286_grande.jpg" alt="Hướng dẫn đặt sofa theo phong thủy theo phong cách Tây Âu"></a>
+										<a href="/blogs/news/huong-dan-dat-sofa-theo-phong-thuy" class="image"><img src="https://file.hstatic.net/1000187230/article/blog3_c00f9b02283b4a888eda2be35939b286_grande.jpg" alt="Hướng dẫn đặt sofa theo phong thủy theo phong cách Tây Âu"></a>
 									 </div>
 								  </div>
 							   </div>
 							   <div class="owl-item" style="width: 393px;">
 								  <div class="item grid__item pd-0">
 									 <div class="a-related-blog">
-										<a href="/blogs/news/trang-tri-sofa-o-phong-khach" class="image"><img src="http://file.hstatic.net/1000187230/article/blog1_900cbc92dfa9424eba3cb35b8ab74f62_grande.jpg" alt="Trang trí sofa ở phòng khách hợp lý và sáng tạo"></a>
+										<a href="/blogs/news/trang-tri-sofa-o-phong-khach" class="image"><img src="https://file.hstatic.net/1000187230/article/blog1_900cbc92dfa9424eba3cb35b8ab74f62_grande.jpg" alt="Trang trí sofa ở phòng khách hợp lý và sáng tạo"></a>
 										<div class="blog-content">
 										   <div class="arrow-up"></div>
 										   <span class="datetime">06-05-2017</span>
@@ -796,14 +796,14 @@
 										   </div>
 										   <a href="/blogs/news/cach-bo-tri-sofa-hop-ly-voi-phong-thuy" class="btn btnViewMore">Xem thêm</a>
 										</div>
-										<a href="/blogs/news/cach-bo-tri-sofa-hop-ly-voi-phong-thuy" class="image"><img src="http://file.hstatic.net/1000187230/article/blog3_grande.jpg" alt="Cách bố trí sofa hợp lý với phong thủy với phong cách lịch sự"></a>
+										<a href="/blogs/news/cach-bo-tri-sofa-hop-ly-voi-phong-thuy" class="image"><img src="https://file.hstatic.net/1000187230/article/blog3_grande.jpg" alt="Cách bố trí sofa hợp lý với phong thủy với phong cách lịch sự"></a>
 									 </div>
 								  </div>
 							   </div>
 							   <div class="owl-item" style="width: 393px;">
 								  <div class="item grid__item pd-0">
 									 <div class="a-related-blog">
-										<a href="/blogs/news/nhung-tien-ich-uu-viet-cua-sofa" class="image"><img src="http://file.hstatic.net/1000187230/article/blog2_grande.jpg" alt="Những tiện ích ưu việt của Sofa để đáp ứng nhu cầu người dùng"></a>
+										<a href="/blogs/news/nhung-tien-ich-uu-viet-cua-sofa" class="image"><img src="https://file.hstatic.net/1000187230/article/blog2_grande.jpg" alt="Những tiện ích ưu việt của Sofa để đáp ứng nhu cầu người dùng"></a>
 										<div class="blog-content">
 										   <div class="arrow-up"></div>
 										   <span class="datetime">06-05-2017</span>
@@ -841,10 +841,10 @@
 	<i class="fa fa-angle-up" aria-hidden="true"></i>
  </div>
 
- <script src="http://theme.hstatic.net/1000187230/1000241027/14/fastclick.min.js?v=2476" type="text/javascript"></script>
- <script src="http://hstatic.net/0/0/global/design/js/owl.carousel.js" type="text/javascript"></script>
- <script src="http://theme.hstatic.net/1000187230/1000241027/14/script.js?v=2476" type="text/javascript"></script>
- <script src="http://theme.hstatic.net/1000187230/1000241027/14/timber.js?v=2476" type="text/javascript"></script>
+ <script src="https://theme.hstatic.net/1000187230/1000241027/14/fastclick.min.js?v=2476" type="text/javascript"></script>
+ <script src="https://hstatic.net/0/0/global/design/js/owl.carousel.js" type="text/javascript"></script>
+ <script src="https://theme.hstatic.net/1000187230/1000241027/14/script.js?v=2476" type="text/javascript"></script>
+ <script src="https://theme.hstatic.net/1000187230/1000241027/14/timber.js?v=2476" type="text/javascript"></script>
  <!-- Validate quantity form -->
  <script>
 	jQuery(document).ready(function() {
@@ -901,7 +901,7 @@
 	
 	});
  </script>
- <script src="http://theme.hstatic.net/1000187230/1000241027/14/handlebars.min.js?v=2476" type="text/javascript"></script>
+ <script src="https://theme.hstatic.net/1000187230/1000241027/14/handlebars.min.js?v=2476" type="text/javascript"></script>
  <!-- /snippets/ajax-cart-template.liquid -->
  <script id="CartTemplate" type="text/template">
 	<form action="/cart" method="post" novalidate class="cart ajaxcart">
@@ -1035,7 +1035,7 @@
 	</div>
 	
  </script>
- <script src="http://theme.hstatic.net/1000187230/1000241027/14/ajax-cart.js?v=2476" type="text/javascript"></script>
+ <script src="https://theme.hstatic.net/1000187230/1000241027/14/ajax-cart.js?v=2476" type="text/javascript"></script>
  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
  <!-- or -->
  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
