change local to host

--- a/views/adminSys/login/login.ejs
+++ b/views/adminSys/login/login.ejs
@@ -83,7 +83,7 @@
                 button: "Aww yiss!",
                 });
 
-                window.location.href = "http://localhost:3000/admin";
+                window.location.href = "/admin";
 
             },
             error: function(err) {
