--- a/views/shop/admin/login.ejs
+++ b/views/shop/admin/login.ejs
@@ -83,7 +83,7 @@
                 button: "Aww yiss!",
                 });
 
-                window.location.href = "http://localhost:3000/seller";
+                window.location.href = "/seller";
 
             },
             error: function(err) {
