--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -28,7 +28,7 @@
 <script src="/javascripts/js/ejs.js"></script>
 <script src="/javascripts/js/ejs.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
 </head>
 <body>
 <style>
