--- a/views/admin/order/order.ejs
+++ b/views/admin/order/order.ejs
@@ -6,7 +6,7 @@
 
 <script src="/javascripts/js/admin/order.js"></script>
 
-<div style="margin-left: 5%;">
+<div>
    <ul class="user-option nav nav-tabs">
       <li class="option option-my-booking is-flex nav-item <%-type == 5?'option-active':''%>">
           <div>
@@ -124,8 +124,8 @@
                             </a>
                         <%}%>
                         <%if (item.status == 1) {%>
-                            <div style="display: flex;">
-                                <div style="margin-right: 10px;">
+                            <div>
+                                <div style="margin-right: 10px; margin-bottom: 5px;">
                                     <button class="btn btn-default order-delivery" type="button" data-id="<%-item.orderId%>">Giao hàng</button>
                                 </div>
                                 <div class="dropdown">
