--- a/views/index.ejs
+++ b/views/index.ejs
@@ -443,8 +443,8 @@
 				 <div class="grid">
 				  <div class="blogSlider" id="productNew">
 					  <div class="MS-content">
-					  <%if (products) {
-						  products.forEach(item => {
+					  <%if (listProduct) {
+						listProduct.forEach(item => {
 							  if (recommend.indexOf(item.id) > -1) {
 					  %>
 
