--- a/views/shop/product/productDetail.ejs
+++ b/views/shop/product/productDetail.ejs
@@ -1,3 +1,4 @@
+<title><%-title%></title>
 <% include ../../partials/header %>
 <link rel="stylesheet" href="/stylesheets/css/view.css">
 <link rel="stylesheet" href="/stylesheets/jquery.exzoom.css" type="text/css">
