--- a/views/auth/user/user-changePassword.ejs
+++ b/views/auth/user/user-changePassword.ejs
@@ -1,3 +1,4 @@
+<title><%-title%></title>
 <% include ../../partials/header %>
 <link rel="stylesheet" href="/stylesheets/css/user_info.css">
 <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
