--- a/views/index.ejs
+++ b/views/index.ejs
@@ -443,9 +443,9 @@
 				 <div class="grid">
 				  <div class="blogSlider" id="productNew">
 					  <div class="MS-content">
-					  <%if (listProduct) {
-						listProduct.forEach(item => {
-							  if (recommend.indexOf(item.id) > -1) {
+					  <%if (listPd) {
+						listPd.forEach(item => {
+							  if (recommend.indexOf(item.id) > -1) { 
 					  %>
 
 						<div class="item">
@@ -725,7 +725,7 @@
 									 <div class="a-related-blog">
 										<div class="blog-content">
 										   <div class="arrow-down"></div>
-										   <span class="datetime">15-05-2017</span>
+										   <span class="datetime">25-06-2021</span>
 										   <a href="/blogs/news/phong-cach-sang-trong-lich-su-cua-mau-ghe-sofa-nhieu-cho-moi">Phong cách sang trọng, lịch sự của mẫu ghế sofa nhiều chỗ mới</a>
 										   <div class="rte">
 											  <p>Phòng khách là nơi được sử dụng nhiều nhất trong ngôi nhà để đón tiếp những người khách đến thăm...</p>
